bug fix
fixed bug where table would overlap other stufff

--- a/User story ERP/CSS/main.css
+++ b/User story ERP/CSS/main.css
@@ -231,6 +231,10 @@ top: -5px;
     width: 20px;
     top: 3%;
 }
+tbody {
+    width: 100%;
+    margin-top: 0px;
+}
 @media only screen and (max-width: 768px) {
     .db{
         width: 100%;
